<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    <EditText
        android:id="@+id/username"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="75dp"
        android:layout_centerHorizontal="true"
        android:textSize="12sp"
        android:hint="@string/username"/>
    <EditText
        android:id="@+id/password"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/username"
        android:inputType="textPassword"
        android:textSize="12sp"
        android:hint="@string/password"/>
    <EditText
        android:id="@+id/repassword"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/password"
        android:inputType="textPassword"
        android:textSize="12sp"
        android:hint="@string/repassword"
        android:visibility="gone"/>
    <Button
        android:id="@+id/loginwebservice"
        android:layout_width="100dp"
        android:layout_height="30dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="60dp"
        android:layout_below="@id/password"
        android:text="@string/loginwebservice"
        android:textSize="12sp"
        android:textColor="#FFFFFF"
        android:background="#FF8800"/>
    <Button
        android:id="@+id/cancellogin"
        android:layout_width="100dp"
        android:layout_height="30dp"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/loginwebservice"
        android:text="@string/cancellogin"
        android:textSize="12sp"
        android:textColor="#111111"
        android:background="#EEEEEE"/>
    <TextView
        android:id="@+id/registerfornew"
        android:layout_width="wrap_content"
        android:layout_height="20dp"
        android:layout_alignRight="@id/password"
        android:layout_below="@id/repassword"
        android:text="@string/register"
        android:textColor="#FF8800"
        android:textSize="12sp" />
</RelativeLayout>
