<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto" >
      <item
          android:icon="@drawable/ic_action_overflow"
          android:title="@string/action_compose"
          android:showAsAction="always">
          <menu>
              <group>
                  <item android:id="@+id/action_delete"
          				android:icon="@drawable/ic_action_discard"
          				android:title="@string/action_delete"
          				android:showAsAction="ifRoom|withText" />
                  <item
                      android:id="@+id/action_refresh_second"
                      android:icon="@drawable/ic_action_refresh"
                      android:title="@string/action_refresh"
                      android:showAsAction="ifRoom|withText" />
              </group>
          </menu>
      </item>
</menu>
