<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    <ImageView 
        android:id="@+id/cloudimage"
        android:contentDescription="@string/action_compose_backup"
        android:layout_width="96dp"
        android:layout_height="96dp"
        android:layout_marginTop="50dp"
        android:layout_centerHorizontal="true"
        android:src="@drawable/ic_action_cloud"/>
    <TextView 
        android:id="@+id/onlocallabel"
	    android:layout_width="wrap_content"
	    android:layout_height="30dp"
	    android:layout_below="@id/cloudimage"
        android:layout_centerHorizontal="true"
	    android:gravity="center"
	    android:text="@string/local"
	    android:textColor="#FF8800"/>
	<TextView 
        android:id="@+id/onlocal"
	    android:layout_width="wrap_content"
	    android:layout_height="50dp"
	    android:layout_below="@id/onlocallabel"
        android:layout_centerHorizontal="true"
	    android:gravity="center"
	    android:textColor="#FF8800"/>
	<Button
	    android:id="@+id/actionbackup"
	    android:layout_width="100dp"
	    android:layout_height="40dp"
	    android:layout_below="@id/onlocal"
	    android:layout_marginTop="50dp"
	    android:layout_centerHorizontal="true"
	    android:background="#FF8800"
	    android:text="@string/action_compose_backup"
	    android:gravity="center"
	    android:textSize="16sp"
	    android:textColor="#FFFFFF"/>
	<Button
	    android:id="@+id/actionrestore"
	    android:layout_width="100dp"
	    android:layout_height="40dp"
	    android:layout_below="@id/actionbackup"
	    android:layout_marginTop="10dp"
	    android:layout_centerHorizontal="true"
	    android:background="#EEEEEE"
	    android:text="@string/action_compose_restore"
	    android:gravity="center"
	    android:textSize="16sp"
	    android:textColor="#FF8800"/>
</RelativeLayout>
