<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/contactdetail"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical" 
    android:isScrollContainer="true">
    <TextView
        android:id="@+id/contact_name_second"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginTop="20dp"
        style="@style/First_level_title"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="5dp"
        android:layout_marginRight="15dp">
	    <TextView
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:text="@string/weibolabel"
	        style="@style/Second_level_title"/>
	    <View
	        android:layout_width="match_parent"
	        android:layout_height="1dp"
            android:background="#FF8800"/>
	    <LinearLayout 
	        android:layout_width="match_parent"
	        android:layout_height="30dp"
	        android:orientation="horizontal">
	        <TextView
		        android:id="@+id/weibolink"
		        android:layout_width="0dp"
		        android:layout_weight="4"
		        android:layout_height="match_parent"
		        android:gravity="center"
		        android:hint="@string/weibolinkno"
		        android:layout_marginTop="5dp"
		        android:longClickable="true"
		        style="@style/Weibo_id_zone"/>
	        <Button
	            android:id="@+id/gotoweiboprofilepage"
	            android:layout_width="0dp"
	            android:layout_weight="1"
	            android:layout_height="match_parent"
	            android:layout_marginTop="5dp"
	            android:layout_marginLeft="3dp"
	            style="@style/Weibo_id_zone"
	            android:text="@string/moreoptions"/>
	    </LinearLayout>
	    <ProgressBar
	        android:id="@+id/weiboprogress"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:max="100"
	        android:visibility="gone"/>
	    <TextView
	        android:id="@+id/weibocontent"
	        android:layout_marginTop="5dp"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        style="@style/Weibo_content_zone"/>
	    <TextView 
	        android:id="@+id/weibotime"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        style="@style/Weibo_time_zone"/>
	    <ImageView
	        android:id="@+id/weibopic"
	        android:contentDescription="@string/weibopic"
	        android:layout_gravity="center"
	     	android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:visibility="gone"/>
	</LinearLayout>
	<ScrollView
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="5dp"
        android:layout_marginRight="15dp">
	    <TextView
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:text="@string/phonelabel"
	        style="@style/Second_level_title"/>
	    <View
	        android:layout_width="match_parent"
	        android:layout_height="1dp"
	        android:background="#FF8800"/>     
	    <GridLayout
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		    android:layout_gravity="fill_horizontal"
	        android:layout_marginLeft="3dp"
		    android:layout_marginRight="3dp"
		    android:columnCount="3"
		    android:rowCount="5">
		    <TextView
		        android:id="@+id/mobilephonelabel"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_marginRight="20dp"
		        android:layout_column="0"
		        android:layout_row="0"
                android:text="@string/mobilephonelabeltext"
		        style="@style/Phone_class_text"/>
		    <TextView
		        android:id="@+id/workphonelabel"
                android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_marginRight="20dp"
		        android:layout_column="0"
		        android:layout_row="1"
	            android:text="@string/workphonelabeltext"
		        style="@style/Phone_class_text"/>
		    <TextView
		        android:id="@+id/homephonelabel"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_marginRight="20dp"
		        android:layout_column="0"
		        android:layout_row="2"
		        android:text="@string/homephonelabeltext"
		        style="@style/Phone_class_text"/>
		    <TextView
		        android:id="@+id/otherphonelabel"
		        android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="20dp"
                android:layout_column="0"
		        android:layout_row="3"
	            android:text="@string/otherphonelabeltext"
		        style="@style/Phone_class_text"/>
		    <Spinner
		        android:id="@+id/mobilephonesspinner"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_row="0"
	            android:layout_column="1"
		        style="@style/Phone_text"/>
		    <Spinner
		        android:id="@+id/workphonesspinner"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_row="1"
		        android:layout_column="1"
	            style="@style/Phone_text"/>
		    <Spinner
		        android:id="@+id/homephonesspinner"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_row="2"
                android:layout_column="1"
		        style="@style/Phone_text"/>
		    <Spinner
		        android:id="@+id/otherphonesspinner"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_row="3"
		        android:layout_column="1"
		        style="@style/Phone_text"/>
		    <Button
		        android:id="@+id/moreformobile"
		        android:layout_height="wrap_content"
		        android:layout_width="wrap_content"
		        android:layout_row="0"
		        android:layout_column="2"
		        style="@style/Button"/>
		    <Button
		        android:id="@+id/moreforwork"
		        android:layout_height="wrap_content"
		        android:layout_width="wrap_content"
		        android:layout_row="1"
		        android:layout_column="2"
		        style="@style/Button"/> 
		    <Button
		        android:id="@+id/moreforhome"
		        android:layout_height="wrap_content"
		        android:layout_width="wrap_content"
		        android:layout_row="2"
		        android:layout_column="2"
		        style="@style/Button"/>
		    <Button
		        android:id="@+id/moreforother"
		        android:layout_height="wrap_content"
		        android:layout_width="wrap_content"
		        android:layout_row="3"
		        android:layout_column="2"
		        style="@style/Button"/>     
	    </GridLayout>
	    <Button
	        android:id="@+id/addnewnum"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_marginTop="10dp"
	        android:layout_gravity="center_horizontal"
	        style="@style/Button_for_addNum"/>
    </LinearLayout>
    </ScrollView>	   
</LinearLayout>
