<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/contactdetail"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="5dp"
    android:layout_marginRight="5dp"
    android:orientation="vertical" >
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="10dp"
        android:text="@string/namelabel"
        android:gravity="left|center_vertical"/>
    <View
	    android:layout_width="match_parent"
	    android:layout_height="1dp"
        android:background="#FF8800"/>
    <LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <EditText
            android:id="@+id/firstname"
	        android:layout_width="0dp"
	        android:layout_height="wrap_content"
	        android:layout_weight="1"
	        android:layout_marginTop="5dp"
	        android:gravity="center"
	        android:textSize="12sp"
	        android:hint="@string/firstname"/>
	    <EditText
	        android:id="@+id/lastname"
	        android:layout_width="0dp"
	        android:layout_height="wrap_content"
	        android:layout_weight="1"
	        android:layout_marginTop="5dp"
	        android:gravity="center"
	        android:textSize="12sp"
	        android:hint="@string/lastname"/>
    </LinearLayout>    
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="20dp"
        android:text="@string/weibolabel"
        android:gravity="left|center_vertical"/>
    <View
	    android:layout_width="match_parent"
	    android:layout_height="1dp"
        android:background="#FF8800"/>
    <EditText
        android:id="@+id/weiboid"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:gravity="center"
        android:textSize="12sp"
	    android:hint="@string/weibolabel"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="20dp"
        android:text="@string/phonelabel"
        android:gravity="left|center_vertical"/>
    <View
	    android:layout_width="match_parent"
	    android:layout_height="1dp"
        android:background="#FF8800"/>
	<GridLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
		android:columnCount="2"
		android:rowCount="4">
		<EditText
		    android:id="@+id/newphone1"
		    android:layout_width="165dp"
		    android:layout_height="wrap_content"
	        android:layout_marginTop="5dp"
	        android:layout_marginRight="5dp"
	        android:layout_row="0"
	        android:layout_column="0"
	        android:gravity="center"
	        android:textSize="12sp"
		    android:hint="@string/addhint"/>
		<EditText
		    android:id="@+id/newphone2"
		    android:layout_width="165dp"
		    android:layout_height="wrap_content"
	        android:layout_marginTop="5dp"
	        android:layout_marginRight="5dp"
	        android:layout_row="1"
	        android:layout_column="0"
	        android:gravity="center"
	        android:textSize="12sp"
		    android:hint="@string/addhint"/>
		<EditText
		    android:id="@+id/newphone3"
		    android:layout_width="165dp"
		    android:layout_height="wrap_content"
	        android:layout_marginTop="5dp"
	        android:layout_marginRight="5dp"
	        android:layout_row="2"
	        android:layout_column="0"
	        android:gravity="center"
	        android:textSize="12sp"
		    android:hint="@string/addhint"/>
		<EditText
		    android:id="@+id/newphone4"
		    android:layout_width="165dp"
		    android:layout_height="wrap_content"
	        android:layout_marginTop="5dp"
	        android:layout_marginRight="5dp"
	        android:layout_row="3"
	        android:layout_column="0"
	        android:gravity="center"
	        android:textSize="12sp"
		    android:hint="@string/addhint"/>
		<Spinner
		    android:id="@+id/newphonetype1"
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content"
            android:layout_row="0"
            android:layout_column="1"
            android:layout_marginTop="5dp"
            android:entries="@array/phonetypelist"
            android:visibility="visible"
	        style="@style/Phone_text"/>
		<Spinner
		    android:id="@+id/newphonetype2"
		    android:layout_width="match_parent"
            android:layout_height="wrap_content"
		    android:layout_row="1"
		    android:layout_column="1"
		    android:layout_marginTop="5dp"
		    android:entries="@array/phonetypelist"
		    android:visibility="visible"
	        style="@style/Phone_text"/>
		<Spinner
		    android:id="@+id/newphonetype3"
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content"
            android:layout_row="2"
            android:layout_column="1"
            android:layout_marginTop="5dp"
            android:entries="@array/phonetypelist"
            android:visibility="visible"
		    style="@style/Phone_text"/>
		<Spinner
		    android:id="@+id/newphonetype4"
	        android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		    android:layout_row="3"
		    android:layout_column="1"
		    android:layout_marginTop="5dp"
		    android:entries="@array/phonetypelist"
		    android:visibility="visible"
		    style="@style/Phone_text"/>	         
	</GridLayout>
</LinearLayout>

